--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -642,7 +642,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -683,7 +683,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -724,7 +724,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -765,7 +765,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -806,7 +806,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -847,7 +847,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -961,7 +961,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Resorts</div>
@@ -1043,7 +1043,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -1084,7 +1084,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -1125,7 +1125,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -1166,7 +1166,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
@@ -1207,7 +1207,7 @@
           </div>
         </div>
         <div class="holder__slider-item holder-slider">
-          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg.png);">
+          <div class="holder-slider__head" style="background-image: url(img/travel-slider-bg-min.png);">
             <div class="holder-slider__subtitle">
               <div class="subtitle">
                 <div class="headline-left">Shore</div>
